[INTERNAL] StandardListItem: fix alignment issue
When the info text is middle aligned, which means there is only title
text and info text, the info text had a padding which misaligned the
title and the info text content. So fixing the alignment issue

--- a/src/sap.m/src/sap/m/themes/base/StandardListItem.less
+++ b/src/sap.m/src/sap/m/themes/base/StandardListItem.less
@@ -129,6 +129,10 @@ html[data-sap-ui-browser='ie11'] .sapMSLIWithDescription > .sapMLIBContent > .sa
 	font-size: @sapMFontMediumSize;
 }
 
+.sapMSLIInfoMiddle > .sapMSLIInfo {
+	padding: 0;
+}
+
 /* The info is aligned right and therefore in RTL mode should be aligned on the left */
 html[dir=rtl] .sapMSLIInfo {
 	text-align: left;
